test/tests/errors/error-class-no-rec-proc2.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        public rec proc x() {

        }
    }
}